se agrega rama dev en github

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/logo-Ecommerce.jpg" type="image/x-icon">
     <!--Agregar las etiquetas meta -->
     <title>E-COMMERCE </title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <script type="module" src="./js/index.js"></script>
 </body>
 </html>
