se agrega union de home con navbar

--- a/pages/home.html
+++ b/pages/home.html
@@ -11,8 +11,8 @@
   <body>
     <header></header>
     <main>
-      <div class="container-fluid">
-        <h1 class="text-center">Muebles disponibles</h1>
+      <div class="container-fluid containerHome">
+        <h1 class="text-center mt-2">Muebles disponibles</h1>
         <div id="containerCards"></div>
       </div>
     </main>
