se agrega modificaciones de mergeado

--- a/pages/login.html
+++ b/pages/login.html
@@ -63,10 +63,7 @@
               <div class="d-flex">
                 <p>No tienes cuenta? -</p>
                 <a
-                  href="#exampleModal"
-                  class="mx-1"
-                  data-bs-toggle="modal"
-                  data-bs-target="#exampleModal"
+                  href="./register.html"
                 >
                   Registrarse</a
                 >
