--- a/pages/login.html
+++ b/pages/login.html
@@ -15,61 +15,62 @@
     <header></header>
     <main>
       <div class="container">
-        <div class="border border-2 rounded-2 m-4 w-50">
-          <div><h2 class="text-center mt-5">Login</h2></div>
-          <div>
-            <form class="m-3">
-              <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label"
-                  >Dirección de email</label
-                >
-                <input
-                  type="email"
-                  class="form-control"
-                  id="exampleInputEmail1"
-                  aria-describedby="emailHelp"
-                  placeholder="Ingrese su email"
-                  required
-                />
-              </div>
-              <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label"
-                  >Contraseña</label
-                >
-                <input
-                  type="password"
-                  class="form-control"
-                  id="exampleInputPassword1"
-                  placeholder="Ingrese su contraseña"
-                  required
-                />
-                <div class="m-2 form-check">
-                  <input
-                    type="checkbox"
-                    class="form-check-input"
-                    id="exampleCheck1"
-                  />
-
-                  <label class="form-check-label" for="exampleCheck1"
-                    >Recordarme</label
+        <div>
+          <div class="border border-2 rounded-2 m-4 w-50">
+            <div><h2 class="text-center mt-5">Login</h2></div>
+            <div>
+              <form class="m-3">
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label"
+                    >Dirección de email</label
                   >
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="exampleInputEmail1"
+                    aria-describedby="emailHelp"
+                    placeholder="Ingrese su email"
+                    required
+                  />
                 </div>
-                <button type="submit" class="btn btn-primary mb-2">
-                  Ingresar
-                </button>
-              </div>
-              <a href="/pages/error404.html">Olvide mi contraseña</a>
-              <hr />
-              <div class="d-flex">
-                <p>No tienes cuenta? -</p>
-                <a
-                  href="./register.html"
-                >
-                  Registrarse</a
-                >
-              </div>
-            </form>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label"
+                    >Contraseña</label
+                  >
+                  <input
+                    type="password"
+                    class="form-control"
+                    id="exampleInputPassword1"
+                    placeholder="Ingrese su contraseña"
+                    required
+                  />
+                  <div class="m-2 form-check">
+                    <input
+                      type="checkbox"
+                      class="form-check-input"
+                      id="exampleCheck1"
+                    />
+
+                    <label class="form-check-label" for="exampleCheck1"
+                      >Recordarme</label
+                    >
+                  </div>
+                  <button type="submit" class="btn btn-primary mb-2">
+                    Ingresar
+                  </button>
+                </div>
+                <a href="/pages/error404.html">Olvide mi contraseña</a>
+                <hr />
+                <div class="d-flex">
+                  <p>No tienes cuenta? -</p>
+                  <a href="./register.html"> Registrarse</a>
+                </div>
+              </form>
+            </div>
           </div>
+          <a href="/index.html"
+            ><button type="button" class="btn btn-warning">Atrás</button></a
+          >
         </div>
       </div>
     </main>
