--- a/pages/contactOld.html
+++ b/pages/contactOld.html
@@ -24,22 +24,37 @@
   </head>
   <body>
     <header></header>
-    <main>
-      <div class="container-fluid mt-5">
+    <main class="mt-5">
+      <div class="container">
         <div>
-          <h1 class="text-center">Contactanos</h1>
-          <p>
-            Para realizar tu consulta, envíanos tu correo electrónico y un breve
-            mensaje en el siguiente formulario:
-          </p>
-        </div>
-
-        <div id="containerFormContact"></div>
-        <div>
+          <form class="border border-2 rounded-2 m-4 p-3 w-50">
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label"
+                >Email
+              </label>
+              <input
+                type="email"
+                class="form-control"
+                id="exampleFormControlInput1"
+                placeholder="Ingrese su email"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlTextarea1" class="form-label"
+                >Dejanos aquí tu mensaje:</label
+              >
+              <textarea
+                class="form-control"
+                id="exampleFormControlTextarea1"
+                rows="3"
+              ></textarea>
+            </div>
+            <div class="d-flex justify-content-end">
+              <button type="button" class="btn btn-success">Enviar</button>
+            </div>
+          </form>
           <a href="/index.html"
-            ><button type="button" class="btn btn-warning mb-2">
-              Atrás
-            </button></a
+            ><button type="button" class="btn btn-warning">Atrás</button></a
           >
         </div>
       </div>
