--- a/pages/login.html
+++ b/pages/login.html
@@ -1,80 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="../assets/logo-Ecommerce.jpg"
+      type="image/x-icon"
+    />
+    <!--Agregar las etiquetas meta -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
+    />
+    <link rel="stylesheet" href="../css/style.css" />
+    <title>E-COMMERCE</title>
   </head>
   <body>
     <header></header>
     <main>
-      <div class="container">
-        <div class="border border-2 rounded-2 m-4 w-50">
-          <div><h2 class="text-center mt-5">Login</h2></div>
-          <div>
-            <form class="m-3">
-              <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label"
-                  >Dirección de email</label
-                >
-                <input
-                  type="email"
-                  class="form-control"
-                  id="exampleInputEmail1"
-                  aria-describedby="emailHelp"
-                  placeholder="Ingrese su email"
-                  required
-                />
-              </div>
-              <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label"
-                  >Contraseña</label
-                >
-                <input
-                  type="password"
-                  class="form-control"
-                  id="exampleInputPassword1"
-                  placeholder="Ingrese su contraseña"
-                  required
-                />
-                <div class="m-2 form-check">
-                  <input
-                    type="checkbox"
-                    class="form-check-input"
-                    id="exampleCheck1"
-                  />
+      <div class="container-fluid mt-5">
+        <div>
+          <h2 class="text-center">Login</h2>
+          <p>Por favor ingresa tus datos para ingresar a nuestra página:</p>
+        </div>
 
-                  <label class="form-check-label" for="exampleCheck1"
-                    >Recordarme</label
-                  >
-                </div>
-                <button type="submit" class="btn btn-primary mb-2">
-                  Ingresar
-                </button>
-              </div>
-              <a href="/pages/error404.html">Olvide mi contraseña</a>
-              <hr />
-              <div class="d-flex">
-                <p>No tienes cuenta? -</p>
-                <a
-                  href="./register.html"
-                >
-                  Registrarse</a
-                >
-              </div>
-            </form>
-          </div>
+        <div id="containerFormLogin"></div>
+        <div>
+          <a href="/index.html"
+            ><button type="button" class="btn btn-warning mb-2">
+              Atrás
+            </button></a
+          >
         </div>
       </div>
     </main>
     <footer></footer>
-
+    <script type="module" src="../js/login.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
