--- a/pages/card1.html
+++ b/pages/card1.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
+    <!-- <link
       rel="shortcut icon"
       href="../assets/logo-Ecommerce.jpg"
       type="image/x-icon"
-    />
+    /> -->
     <!--Agregar las etiquetas meta -->
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,48 +20,36 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/cards/card1.css" />
+
     <title>E-COMMERCE</title>
   </head>
   <body>
     <header></header>
-    <main class="mt-5">
+    <main>
       <div class="container">
         <div>
-          <form class="border border-2 rounded-2 m-4 p-3 w-50">
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label"
-                >Email
-              </label>
-              <input
-                type="email"
-                class="form-control"
-                id="exampleFormControlInput1"
-                placeholder="Ingrese su email"
-              />
-            </div>
-            <div class="mb-3">
-              <label for="exampleFormControlTextarea1" class="form-label"
-                >Dejanos aquí tu mensaje:</label
-              >
-              <textarea
-                class="form-control"
-                id="exampleFormControlTextarea1"
-                rows="3"
-              ></textarea>
-            </div>
-            <div class="d-flex justify-content-end">
-              <button type="button" class="btn btn-success">Enviar</button>
-            </div>
-          </form>
-          <a href="/index.html"
-            ><button type="button" class="btn btn-warning">Atrás</button></a
-          >
+          <h2 class="text-center mt-4">Cards de ejemplo</h2>
         </div>
+        <div class="container-fluid text-center mt-5">
+              <div id="containerCard1"></div>
+              
+          </div>
+  
+          <div>
+            <a href="/index.html"
+              ><button type="button" class="btn btn-warning mb-2">
+                Atrás
+              </button></a
+            >
+          </div>
+  
+      </div>
       </div>
     </main>
     <footer></footer>
-    <script type="module" src="../js/contact.js"></script>
+    <script type="module" src="../js/cards/card1.js"></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
